# licensor

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  configuration.rs  licensor.toml  licensor.yml  main.rs  template.rs  tools.rs  variable.rs
